particles texture mapping coordinates objects #60127

Closed
opened 2019-01-03 18:53:26 +01:00 by laurent renaud · 8 comments

System Information
Operating system: windows 10 pro version 1803 17134.472
Graphics card: NVIDIA Geforce GTX 670

Blender Version
Broken: 2.80 7c438e5366

Worked: 2.79

Short description of error
when using texture in particleSystem, mapping to object does not work

Exact steps for others to reproduce the error
open the file in 2.79. : Hit play. Particles size are growing depend on Empty position along animation
open the same file in 2.80 : Hit play. Particles size stay stuck like it was on 2.79 last save.

**System Information** Operating system: windows 10 pro version 1803 17134.472 Graphics card: NVIDIA Geforce GTX 670 **Blender Version** Broken: 2.80 7c438e5366b2 Worked: 2.79 **Short description of error** when using texture in particleSystem, mapping to object does not work **Exact steps for others to reproduce the error** open the file in 2.79. : Hit play. Particles size are growing depend on Empty position along animation open the same file in 2.80 : Hit play. Particles size stay stuck like it was on 2.79 last save.
Author

Added subscriber: @LaurentRenaud

Added subscriber: @LaurentRenaud
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Mind sharing the blendfile?

Marking as incomplete until we have that...

Mind sharing the blendfile? Marking as incomplete until we have that...
Author

bug-report-particlemapping.blend sorry I thought it was done

[bug-report-particlemapping.blend](https://archive.blender.org/developer/F6165149/bug-report-particlemapping.blend) sorry I thought it was done

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

It seems also like the performance is a lot worse in 2.8 (7fps vs 25fps for me), but that might be because it's not working correctly in the first place.

@brecht who to assign this to?

It seems also like the performance is a lot worse in 2.8 (7fps vs 25fps for me), but that might be because it's not working correctly in the first place. @brecht who to assign this to?
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-28 10:13:35 +01:00

This issue was referenced by 2e3433c1f7

This issue was referenced by 2e3433c1f7b86cabf4a6d84b5ccfa72d658c4b0a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60127
No description provided.