Fix T60127: Particles texture mapping coordinates objects

Part of the issue was a missing relation. Other part wes
aboud object's inverse matrix never being updated.